[metadata]
name = data-grabber-jmishler
version = attr: data_grabber.__version__
author = Jonathan Mishler
author_email = jonathan.mishler@gmail.com
description = Utility to download and store data
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires = 
    urllib3
python_requires = >=3.6